# rocket-runtime

./: .clangd  .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  RELEASE_CYCLE.md  STYLE_GUIDE.md  a.out  build.ninja  cmake_install.cmake  compile_commands.json  crash.dump  deps.py  helper-scripts.py  index.html  run.sh  toolchain.cmake
.github/workflows/: cmake-multi-platform.yml
examples/: ball_smasher.cpp  custom_shader.cpp  moving_circle.cpp  software_renderer.cpp
html/: annotated.html  annotated_dup.js  asset_8hpp_source.html  astroui_8hpp_source.html  classastro_1_1button__t-members.html  classastro_1_1button__t.html  classastro_1_1dialog__t-members.html  classastro_1_1dialog__t.html  classastro_1_1dialog__t.js  classastro_1_1input__field__t-members.html  classastro_1_1input__field__t.html  classes.html  classquark_1_1percentage__t-members.html  classquark_1_1percentage__t.html  classrocket_1_1asset__manager__t-members.html  classrocket_1_1asset__manager__t.html  classrocket_1_1asset__manager__t.js  classrocket_1_1audio__t-members.html  classrocket_1_1audio__t.html  classrocket_1_1audio__t.js  classrocket_1_1font__t-members.html  classrocket_1_1font__t.html  classrocket_1_1font__t.js  classrocket_1_1renderer__2d-members.html  classrocket_1_1renderer__2d.html  classrocket_1_1renderer__2d.js  classrocket_1_1renderer__3d-members.html  classrocket_1_1renderer__3d.html  classrocket_1_1renderer__3d.js  classrocket_1_1shader__t-members.html  classrocket_1_1shader__t.html  classrocket_1_1shader__t.js  classrocket_1_1shell__renderer__2d-members.html  classrocket_1_1shell__renderer__2d.html  classrocket_1_1text__t-members.html  classrocket_1_1text__t.html  classrocket_1_1text__t.js  classrocket_1_1texture__t-members.html  classrocket_1_1texture__t.html  classrocket_1_1texture__t.js  (+105 more)
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+28 more)
include/: asset.hpp  renderer.hpp  runtime.hpp  types.hpp  window.hpp
include/astro/: astroui.hpp
include/quark/: physics.hpp  types.hpp
include/rocket/: asset.hpp  audio.hpp  constants.hpp  crashdump.hpp  glfnldr.hpp  io.hpp  macros.hpp  memory.hpp  persistence.hpp  renderer.hpp  renderer_helpers.hpp  rgl.hpp  runtime.hpp  scripting.hpp  shader.hpp  threads.hpp  types.hpp  window.hpp  window_helpers.hpp
include/sgfx/: sgfx.hpp  types.hpp
latex/: annotated.tex  asset_8hpp_source.tex  astroui_8hpp_source.tex  classastro_1_1button__t.tex  classastro_1_1dialog__t.tex  classastro_1_1input__field__t.tex  classquark_1_1percentage__t.tex  classrocket_1_1asset__manager__t.tex  classrocket_1_1audio__t.tex  classrocket_1_1font__t.tex  classrocket_1_1renderer__2d.tex  classrocket_1_1renderer__3d.tex  classrocket_1_1shader__t.tex  classrocket_1_1shell__renderer__2d.tex  classrocket_1_1text__t.tex  classrocket_1_1texture__t.tex  classrocket_1_1window__t.tex  files.tex  io_8hpp_source.tex  md_README.tex  physics_8hpp_source.tex  quark_2types_8hpp_source.tex  refman.tex  renderer_8hpp_source.tex  rocket_2types_8hpp_source.tex  runtime_8hpp_source.tex  shader_8hpp_source.tex  stb__truetype_8h_source.tex  structastro_1_1border__t.tex  structastro_1_1draw__info__t.tex  structquark_1_1body__t.tex  structquark_1_1gravity__t.tex  structquark_1_1material__t.tex  structquark_1_1movement__t.tex  structquark__2d_1_1still__in__development.tex  structquark__3d_1_1still__in__development.tex  structrocket_1_1camera3d__t.tex  structrocket_1_1fbounding__box.tex  structrocket_1_1fbounding__box__3d.tex  structrocket_1_1ibounding__box.tex  (+25 more)
libs/libquarrel/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
libs/libquarrel/.cache/clangd/index/: args.cpp.6B3E5F7E4058731D.idx  libquarrel.cpp.7965718EB842F36B.idx  parser.hpp.61E5D4CCD65AB296.idx
libs/libquarrel/include/libquarrel/: parser.hpp
libs/libquarrel/src/: libquarrel.cpp
libs/libquarrel/tests/: args.cpp
rocket-runtime-linux-x86_64/examples/: custom_shader  moving_circle
rocket-runtime-linux-x86_64/resources/: custom_shader_frag.glsl  custom_shader_hsvutil.glsl  update_rect_position.py
rocket-runtime-linux-x86_64/tests/: borderless_windowed_test  default_shader_test  gamepad_test  icon_test  initializer_test  io_simulation_test  io_test  iosim  multithreaded_test  persistence_test  plugin_test  scripting_test  sound_engine_test  text_test  triangle_drawcall_test  ui_init_test
rust/: Cargo.toml  build.rs
rust/ffi/: runtime.rs
rust/src/: lib.rs
src/: asset.cpp  headeronlyimpl.cpp  io.cpp  libs.cpp  renderer.cpp  renderer3d.cpp  runtime.cpp  special_cases.cpp  types.cpp  util.cpp  util.hpp  window.cpp
src/astro/: astroui.cpp
src/editor/: code_generator.cpp  code_generator.hpp  collapsiblesection.h  main.cpp  main.cpp.ui  ui.h
src/include/: FontDefault.h  FontDefault.h.old  audio.hpp  crashdump.hpp  data_structures.hpp  glfnldr.hpp  internal_types.hpp  intl_macros.hpp  native.hpp  plugin.hpp  rgl.hpp  shader.hpp  (+4 more)
tests/: RocketRuntime_test.cpp  argument_test.cpp  borderless_windowed_test.cpp  custom_fbo_test.cpp  default_shader_test.cpp  gamepad_test.cpp  icon_test.cpp  initializer_test.cpp  io_simulation_test.cpp  io_test.cpp  iosim.cpp  line_test.cpp  multithreaded_test.cpp  netcore_test.cpp  persistence_test.cpp  plugin_test.cpp  rectangle_test.cpp  render_cache_test.cpp  rounded_texture_rectangle_test.cpp  scripting_test.cpp  shader_test.cpp  sound_engine_test.cpp  state_reset_test.cpp  test_generator_test.cpp  text_test.cpp  texture_atlas_test.cpp  triangle_drawcall_test.cpp  ui_init_test.cpp
(+354 files in other folders)
